@@ -10,3 +10,4 @@
 /static_scoreboard
 /combined_scoreboard
 /balloons
+/simulate_contest
