@@ -40,6 +40,7 @@ Version 3.4.0 - DEV
  - Add option to generate testdata and add ASSERT to checktestdata syntax.
  - Correct mount bind option, see Debian bug #677815. Ported from
    WISVCH/DOMjudge tree at GitHub.
+ - Add program to "relive" simulate original contest submissions.
 
 Version 3.3.0 - 29 May 2012
 ---------------------------
